changing the navigation class

--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -29,3 +29,11 @@ body {
     background-color: white; 
     position: fixed;
 }
+
+p .navigation {
+    margin: 10px 10px;
+    padding: 10px;
+    border: 1px solid #007d58;
+    background-color: white; 
+    position: fixed;
+}
