--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -9,7 +9,7 @@ p {
     font-family: Helvetica;
 }
 
-</* Old Body
+/* Old Body
 
 body {
     font-family: SimplonBP,sans-serif,-apple-system,BlinkMacSystemFont;
@@ -62,7 +62,6 @@ footer {
 
 .footer-nav p {
     display: inline-block
-    margin: 10px;
     margin: 10px 10px;
     padding: 10px;
     border: 1px solid #007d58;
