--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -61,7 +61,7 @@ footer {
 }
 
 .footer-nav p {
-    display: inline-block
+    display: inline-block;
     margin: 10px 10px;
     padding: 10px;
     border: 1px solid #007d58;
