--- a/Resources/CSS/index.css
+++ b/Resources/CSS/index.css
@@ -37,7 +37,7 @@ body {
     width: 100vw;
 }
 
-.navigation {
+li.navigation {
     margin: 10px 10px;
     padding: 10px;
     border: 1px solid #007d58;
